syntax = "proto3";
package cosmos.evm.ibc.clients.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "cosmos/evm/ibc/clients/v1/types.proto";
import "cosmos/query/v1/query.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

option go_package = "github.com/cosmos/evm/x/ibc/clients/types";

// Query defines the gRPC querier service.
service Query {
  // ClientPrecompile returns the registered client precompile for a given
  // client.
  rpc ClientPrecompile(QueryClientPrecompileRequest)
      returns (QueryClientPrecompileResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get =
        "/cosmos/evm/ibc/clients/v1/client_precompile/{client}";
  }

  // ClientPrecompiles returns all the ClientPrecompile values.
  rpc ClientPrecompiles(QueryClientPrecompilesRequest)
      returns (QueryClientPrecompilesResponse) {
    option (cosmos.query.v1.module_query_safe) = true;
    option (google.api.http).get =
        "/cosmos/evm/ibc/clients/v1/client_precompiles";
  }

  // Params returns the module parameters.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/cosmos/evm/ibc/clients/v1/params";
  }
}

// QueryClientPrecompileRequest is the request type for the
// Query/ClientPrecompile RPC
message QueryClientPrecompileRequest {
  // client can be either the ibc client identifier or the hex contract address
  // of the precompile
  string client = 1;
}

// QueryClientPrecompileResponse is the response type for the
// Query/ClientPrecompile RPC
message QueryClientPrecompileResponse {
  // precompile returns the info about a registered client precompile for the
  // ibc clients module
  ClientPrecompile precompile = 1;
}

// QueryClientPrecompilesRequest is the request type for the
// Query/ClientPrecompiles RPC
message QueryClientPrecompilesRequest {
  // pagination defines an optional pagination for the request.
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

// QueryClientPrecompilesResponse is the response type for the
// Query/ClientPrecompiles RPC
message QueryClientPrecompilesResponse {
  // precompiles is a slice of registered client precompiles for the ibc clients
  // module
  repeated ClientPrecompile precompiles = 1;

  // pagination defines the pagination in the response.
  cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params defines the parameters of the module.
  Params params = 1
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}
